test/errhandling/ferguson/err-return.3.good
(y = (x = 1))
(y = (x = 2))
deinit 2
deinit 1
Error: test error
  err-return.chpl:23: thrown here
